--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/Index.cshtml
@@ -11,6 +11,9 @@
 
 @using (Html.BeginForm("Index", "ConciliacionBanco", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -91,7 +94,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_ConciliacionBanco", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin })
+            @Html.Action("GridViewPartial_ConciliacionBanco", new { Nuevo = ViewBag.Nuevo })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
