--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoMovimiento/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoMovimiento/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Banco.ba_TipoFlujo_Movimiento_Info
 @{
-    ViewBag.Title = "Modificar movimiento de tipo flujo";
+    ViewBag.Title = "Consultar movimiento de tipo flujo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -8,7 +8,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Modificar", "TipoFlujoMovimiento", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "TipoFlujoMovimiento", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     if (ViewBag.mensaje != null)
     {
@@ -27,9 +27,43 @@
             </h4>
         </div>
     }
-
     @Html.HiddenFor(q => q.IdEmpresa);
     @Html.HiddenFor(q => q.IdMovimiento);
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-9 col-md-1">
+                @if (@ViewBag.Nuevo == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "TipoFlujoMovimiento", new { Area = "Banco", IdEmpresa = Model.IdEmpresa }, null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Modificar == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "TipoFlujoMovimiento", new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdMovimiento = Model.IdMovimiento }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Anular == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "TipoFlujoMovimiento", new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdMovimiento = Model.IdMovimiento }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-6">
@@ -83,7 +117,6 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index", "TipoFlujoMovimiento", new { Area ="Banco" }, null)">Cancelar</a>
     </div>
 
