--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoMovimiento/_GridViewPartial_TipoFlujoMovimiento.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoMovimiento/_GridViewPartial_TipoFlujoMovimiento.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_TipoFlujoMovimiento";
-        settings.CallbackRouteValues = new { Controller = "TipoFlujoMovimiento", Action = "GridViewPartial_TipoFlujoMovimiento" };
+        settings.CallbackRouteValues = new { Controller = "TipoFlujoMovimiento", Action = "GridViewPartial_TipoFlujoMovimiento", Nuevo = ViewBag.Nuevo };
         settings.KeyFieldName = "IdMovimiento";
         settings.Width = Unit.Percentage(100);
 
@@ -63,20 +63,26 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdMovimiento = DataBinder.Eval(tc.DataItem, "IdMovimiento") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdMovimiento = DataBinder.Eval(tc.DataItem, "IdMovimiento") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdMovimiento = DataBinder.Eval(tc.DataItem, "IdMovimiento") })
+                );
+                //if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
+                //{
+                //    ViewContext.Writer.Write(
+                //Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdMovimiento = DataBinder.Eval(tc.DataItem, "IdMovimiento") }) + "&nbsp;" +
+                //        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdMovimiento = DataBinder.Eval(tc.DataItem, "IdMovimiento") },
+                //            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
+                //    );
+                //}
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -112,6 +118,8 @@
 
             });
         });
+
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
