--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Banco.ba_Archivo_Transferencia_Info
 @{
-    ViewBag.Title = "Anular archivo bancario";
+    ViewBag.Title = "Consultar archivo bancario";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -14,8 +14,112 @@
             </h4>
         </div>
     }
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+<script>
+
+    GridView_flujo_det.PerformCallback();
+function GetValor()
+    {
+        var datos = {
+            IdTransaccionSession : $("#IdTransaccionSession").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetValor", "ArchivoBancario",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#cb_Valor").val(data);
+                actualizarGridDetFlujo();
+            },
+            error: function (error) {
+            }
+        });
+    }
+    function MostrarModalPlantilla() {
+        $("#PlantillaModal").modal("show");
+    }
+
+    function AgregarPlantilla(IdPlantilla) {
+        var datos = {
+            Valor: $("#cb_Valor").val(),
+            IdPlantillaTipoFlujo: IdPlantilla,
+            IdTransaccionSession: $("#IdTransaccionSession").val(),
+            IdEmpresa: $("#IdEmpresa").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("cargar_PlantillaTipoFlujoArchivo", "ArchivoBancario",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(data);
+                GridView_flujo_det.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+        $("#PlantillaModal").modal("hide");
+    }
+
+    function actualizarGridDetFlujo() {
+        var datos = {
+            Valor: $("#cb_Valor").val(),
+            IdTransaccionSession: $("#IdTransaccionSession").val(),
+            IdEmpresa: $("#IdEmpresa").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("actualizarGridDetFlujoArchivo", "ArchivoBancario", new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridView_flujo_det.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function CalcularPorcentaje() {
+        var valor = GridView_flujo_det.GetEditor('Valor').GetValue();
+        var ValorTotal = $("#cb_Valor").val();
+        var PorcentajeSet = (valor * 100) / ValorTotal
+
+        GridView_flujo_det.GetEditor('Porcentaje').SetValue(PorcentajeSet);
+    }
+
+    function CalcularValor() {
+        var porcentaje = GridView_flujo_det.GetEditor('Porcentaje').GetValue();
+        var ValorTotal = $("#cb_Valor").val();
+        var ValorSet = (ValorTotal * porcentaje) / 100
+
+        GridView_flujo_det.GetEditor('Valor').SetValue(ValorSet);
+    }
+</script>
+
 <script>
     var selectedIDs;
     function OnBeginCallback(s, e) {
@@ -91,32 +195,94 @@
     }
 </script>
 
-@using (Html.BeginForm("Anular", "ArchivoBancario", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "ArchivoBancario", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdArchivo)
+    @Html.HiddenFor(q => q.SecuencialInicial)
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-7 col-md-1">
+                @if (@ViewBag.Nuevo == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "ArchivoBancario", new { Area = "Banco", IdEmpresa = Model.IdEmpresa }, null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Modificar == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "ArchivoBancario", new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdArchivo = Model.IdArchivo }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Anular == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "ArchivoBancario", new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdArchivo = Model.IdArchivo }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <a type="button" class="btn btn-primary form-control" title="Descargar" href="@Url.Action("get_archivo","ArchivoBancario",new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdArchivo =Model.IdArchivo },null)">
+                        <i class="fa fa-download"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            
+            <div class="col-md-9">
+                <div class="form-group">
+                    <label for="ICatalogo">Nombre archivo*</label>
+                    @Html.TextBoxFor(q => q.Nom_Archivo, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Nom_Archivo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal", @disabled = "disabled" })
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="IdBanco">Banco*</label>
-                    @Html.DropDownListFor(q => q.IdBanco, new SelectList(ViewBag.lst_cuenta_bancarias, "IdBanco", "ba_descripcion"), new { @class = "form-control", @id = "IdBanco", @disabled = "disabled" })
+                    @Html.DropDownListFor(q => q.IdBanco, new SelectList(ViewBag.lst_cuenta_bancarias, "IdBanco", "ba_descripcion"), new { @class = "form-control", @id = "IdBanco", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.IdBanco, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdBanco">Proceso bancario*</label>
-                    @Html.DropDownListFor(q => q.IdProceso_bancario, new SelectList(ViewBag.lst_proceso, "IdProceso", "NombreProceso"), new { @class = "form-control", @id = "IdProceso", @disabled = "disabled" })
+                    @Html.DropDownListFor(q => q.IdProceso_bancario, new SelectList(ViewBag.lst_proceso, "IdProceso", "NombreProceso"), new { @class = "form-control", @id = "IdProceso", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.IdProceso_bancario, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -144,41 +310,22 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="ICatalogo">Código archivo</label>
-                    @Html.TextBoxFor(q => q.cod_archivo, new { @class = "form-control", @disabled = "disabled" })
-                    @Html.ValidationMessageFor(q => q.cod_archivo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-9">
-                <div class="form-group">
-                    <label for="ICatalogo">Nombre archivo*</label>
-                    @Html.TextBoxFor(q => q.Nom_Archivo, new { @class = "form-control", @disabled = "disabled" })
-                    @Html.ValidationMessageFor(q => q.Nom_Archivo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="col-md-1">
-                <label for="IdImprimir"></label>
-                <div class="form-group">
-                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                        <i class="fa fa-print"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
+    
 
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-10">
                 <div class="form-group">
                     <label for="ICatalogo">Observación*</label>
                     @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="ICatalogo">Valor*</label>
+                    @Html.TextBoxFor(q => q.cb_Valor, new { @class = "form-control", @id = "cb_Valor", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -249,7 +396,7 @@
                                 <h4 class="modal-title">Plantilla tipo de flujo</h4>
                             </div>
                             <div class="modal-body">
-                                @Html.Action("GridViewPartial_TipoFlujoPlantilla_Asignar", new { Area = "Banco", Controller = "TipoFlujoPlantilla" })
+                                @Html.Action("GridViewPartial_TipoFlujoPlantilla_Asignar", new { Area = "Banco", Controller = "ArchivoBancario" })
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -267,7 +414,7 @@
                     </div>
                 </div>
                 <br />
-                @Html.Action("GridViewPartial_flujo_det", new { Area = "Banco", Controller = "TipoFlujoBanco" })
+                @Html.Action("GridViewPartial_flujo_det", new { Area = "Banco", Controller = "ArchivoBancario" })
             </div>
 
 
@@ -275,7 +422,6 @@
     </div>
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index","ArchivoBancario",new { Area = "Banco" },null)">Cancelar</a>
     </div>
     @section Scripts {
@@ -285,17 +431,12 @@
 
 
 <script>
-    $(function () {
-        cargar_procesos();
-        GetListBancoPorSucursal();
-
-    });
         $("#IdBanco").change(function () {
-        $("#IdProceso").empty();
         cargar_procesos();
     });
     $("#IdSucursal").change(function () {
         GetListBancoPorSucursal();
+        cargar_procesos();
     });
 
         function GetListBancoPorSucursal() {
@@ -329,7 +470,8 @@
         $("#IdProceso").empty();
 
                 var datos = {
-                    IdBanco: $("#IdBanco").val()
+                    IdBanco: $("#IdBanco").val(),
+                    SeContabiliza: 1
                 }
 
                 $.ajax({
