--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Index.cshtml
@@ -11,6 +11,8 @@
 
 @using (Html.BeginForm("Index", "ChequeBanco", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -100,7 +102,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_cheque", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_cheque", new { Nuevo = ViewBag.Nuevo })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
