--- a/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Banco.ba_Cbte_Ban_Info
 @{
-    ViewBag.Title = ("Anular nota de débito bancaria" + " con ID #" + @Model.IdCbteCble);
+    ViewBag.Title = ("Consultar depósito bancario" + " con ID #" + @Model.IdCbteCble);
     Layout = "~/Views/Shared/_Layout.cshtml";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
@@ -8,23 +8,44 @@
     }
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+<script src="~/Scripts/ScriptsGenerales.js"></script>
 
 <script type="text/javascript">
     $(function () {
         $("#IdBanco").change(function () {
             armar_diario();
         });
-        $("#cb_Valor").change(function () {
-            armar_diario();
-            actualizarGridDetFlujo();
-        });
+
         $("#IdSucursal").change(function () {
             GetListBancoPorSucursal();
-            armar_diario();
+            actualizarModal();
         });
 
+        actualizarModal();
         actualizarGridDetFlujo();
     });
+
+    function actualizarModal() {
+        var datos = {
+            IdSucursal: $("#IdSucursal").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("Filtrar_GridViewPartial_DepositoBanco_x_cruzar", "DepositoBanco",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridView_DepositoBanco_x_cruzar.PerformCallback();
+                GridView_DepositoBanco_x_cruzar.UnselectRows();
+            },
+            error: function (error) {
+            }
+        });
+    }
 
     function MostrarModalPlantilla() {
         $("#PlantillaModal").modal("show");
@@ -118,32 +139,23 @@ function GetListBancoPorSucursal() {
     }
     var selectedIDs;
     function OnBeginCallback(s, e) {
-        e.customArgs["TipoPersona"] = $("#IdTipo_Persona").val();
-        e.customArgs["Entidad"] = IdEntidad.GetValue();
         e.customArgs["selectedIDs"] = selectedIDs;
     }
     function OnSelectionChanged(s, e) {
-        s.GetSelectedFieldValues("IdOrdenPago_op", GetSelectedFieldValuesCallback);
+        s.GetSelectedFieldValues("mcj_IdCbteCble", GetSelectedFieldValuesCallback);
     }
     function GetSelectedFieldValuesCallback(values) {
         //Capture all selected keys
         selectedIDs = values.join(',');
     }
-    function MostrarModal() {
-        selectedIDs = "";
-        GridView_DebitoBanco_op_x_cruzar.PerformCallback();
-        GridView_DebitoBanco_op_x_cruzar.UnselectRows();
-        $("#OpModal").modal("show");
-    }
-
-    function AddOP() {
+        function AddOP() {
         var datos = {
             IDs: selectedIDs
         }
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("EditingAddNew", "NotaDeDebitoBanco",new { Area = "Banco"})',
+            url: '@Url.Action("EditingAddNew", "DepositoBanco",new { Area = "Banco"})',
             async: false,
             bDeferRender: true,
             bProcessing: true,
@@ -155,24 +167,29 @@ function GetListBancoPorSucursal() {
             }
         });
         selectedIDs = "";
-        GridView_DebitoBanco_op_x_cruzar.PerformCallback();
-        GridView_DebitoBanco_op_x_cruzar.UnselectRows();
-        GridView_DebitoBanco_op.PerformCallback();
+        GridView_DepositoBanco_x_cruzar.PerformCallback();
+        GridView_DepositoBanco_x_cruzar.UnselectRows();
+        GridView_DepositoBanco_det.PerformCallback();
         $("#OpModal").modal("hide");
+    }
+
+    function MostrarModal() {
+        selectedIDs = "";
+        GridView_DepositoBanco_x_cruzar.PerformCallback();
+        GridView_DepositoBanco_x_cruzar.UnselectRows();
+        $("#OpModal").modal("show");
     }
 
     function armar_diario() {
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
             IdBanco: $("#IdBanco").val(),
-            IdTipoNota: IdTipoNota.GetValue(),
-            IdTransaccionSession: $("#IdTransaccionSession").val(),
-            Valor: $("#cb_Valor").val()
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("armar_diario", "ChequeBanco",new { Area = "Banco"})',
+            url: '@Url.Action("armar_diario", "DepositoBanco",new { Area = "Banco"})',
             async: false,
             bDeferRender: true,
             bProcessing: true,
@@ -181,44 +198,29 @@ function GetListBancoPorSucursal() {
             success: function (data) {
                 GridView_comprobante_detalle.PerformCallback();
                 $("#cb_Valor").val(data);
+                actualizarGridDetFlujo();
             },
             error: function (error) {
             }
         });
-    }
-
-    function vaciar_detalles() {
-        var datos = {
-            IdTransaccionSession: $("#IdTransaccionSession").val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("vaciar_detalle", "ChequeBanco",new { Area = "Banco"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-            },
-            error: function (error) {
-            }
-        });
-        GridView_comprobante_detalle.PerformCallback();
-        GridView_cheque_op.PerformCallback();
     }
 
     function OnSelectedCtaCbleChanged() {
         GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
     }
     function GrupoComboBox_BeginCallback(s, e) {
-        e.customArgs["pre_IdCtaCble"] = GridView_comprobante_detalle.GetEditor("IdCtaCble").GetValue();
+        e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
         e.customArgs["pre_fecha"] = moment(cb_Fecha.GetDate()).format('DD/MM/YYYY');
+    }
+
+    function Imprimir() {
+        var location = GetPathServer();        
+        var win = window.open(location +"/Reportes/BancoReportes/BAN_002?IdTipocbte="+@Model.IdTipocbte+"&IdCbteCble="+@Model.IdCbteCble, '_blank');
+        win.focus();
     }
 </script>
 
-@using (Html.BeginForm("Anular", "NotaDeDebitoBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "DepositoBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
@@ -235,6 +237,15 @@ function GetListBancoPorSucursal() {
 
     }
 
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
     <div class="modal fade" id="PlantillaModal" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
@@ -250,6 +261,7 @@ function GetListBancoPorSucursal() {
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
+
         </div>
     </div>
 
@@ -259,10 +271,10 @@ function GetListBancoPorSucursal() {
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Ordenes de pago</h4>
+                    <h4 class="modal-title">Ingresos por depositar</h4>
                 </div>
                 <div class="modal-body">
-                    @Html.Action("GridViewPartial_DebitoBanco_op_x_cruzar")
+                    @Html.Action("GridViewPartial_DepositoBanco_x_cruzar")
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" onclick="AddOP();">Aceptar</button>
@@ -275,6 +287,47 @@ function GetListBancoPorSucursal() {
 
     <div class="row">
         <div class="col-md-12">
+            <div class="col-md-offset-8 col-md-1">
+                @if (@ViewBag.Nuevo == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "DepositoBanco", new { Area = "Banco", IdEmpresa = Model.IdEmpresa }, null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Modificar == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "DepositoBanco", new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdTipocbte = Model.IdTipocbte, IdCbteCble=Model.IdCbteCble }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Anular == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "DepositoBanco", new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdTipocbte = Model.IdTipocbte, IdCbteCble=Model.IdCbteCble }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal:*</label>
@@ -282,14 +335,7 @@ function GetListBancoPorSucursal() {
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-5">
-                <div class="form-group">
-                    <label for="IdTipoNota">Tipo de nota:*</label>
-                    @Html.Partial("_CmbTipoNota", Model.IdTipoNota)
-                    @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-offset-2 col-md-2">
+            <div class="col-md-offset-5 col-md-2">
                 <div class="form-group">
                     <label for="cb_Fecha">Fecha:*</label>
                     <div class="input-group date">
@@ -330,6 +376,7 @@ function GetListBancoPorSucursal() {
             </div>
         </div>
     </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -342,83 +389,55 @@ function GetListBancoPorSucursal() {
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group has-error">
-                    <label for="MotivoAnulacion">Motivo anulación*</label>
-                    @Html.TextAreaFor(q => q.MotivoAnulacion, new { @id = "MotivoAnulacion", @class = "form-control", @rows = 2 })
-                    @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-
 
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active">
-                <a href="#tab_diario" aria-controls="vales" role="tab" data-toggle="tab">Diario</a>
+                <a href="#tab_op" aria-controls="vales" role="tab" data-toggle="tab">Ingresos</a>
             </li>
             <li>
-                <a href="#tab_op" aria-controls="vales" role="tab" data-toggle="tab">Ordenes de pago</a>
+                <a href="#tab_diario" aria-controls="vales" role="tab" data-toggle="tab">Diario</a>
             </li>
             <li>
                 <a href="#tab_flujo" aria-controls="vales" role="tab" data-toggle="tab">Flujo</a>
             </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_op">
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <label for="IdTipo_Persona">Tipo persona:*</label>
-                            @Html.DropDownListFor(q => q.IdTipo_Persona, new SelectList(ViewBag.lst_tipo_personas, "Key", "Value"), new { @class = "form-control", @id = "IdTipo_Persona" })
+            <div class="tab-content" style="padding-top: 20px">
+                <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_op">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <button type="button" class="btn btn-primary" id="btn_buscar_op" onclick="MostrarModal();">
+                                <i class="fa fa-search"></i>
+                            </button>
                         </div>
                     </div>
-                    <div class="col-md-9">
-                        <div class="form-group">
-                            <label for="IdEntidad">Beneficiario:*</label>
-                            @Html.Partial("_CmbPersona_DebitoBanco", Model.IdEntidad)
-                            @Html.ValidationMessageFor(q => q.IdEntidad, "", new { @class = "text-danger" })
+                    <br />
+                    @Html.Action("GridViewPartial_DepositoBanco_det")
+                </div>
+
+                <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_diario">
+                    @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
+                </div>
+           
+                <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_flujo">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <button type="button" class="btn btn-primary" id="btn_buscar_plantilla" onclick="MostrarModalPlantilla();">
+                                <i class="fa fa-search" title="Plantilla Tipo de Flujo"></i>
+                            </button>
                         </div>
                     </div>
+                    <br />
+                     @Html.Action("GridViewPartial_flujo_det", new { Area = "Banco", Controller = "TipoFlujoBanco" })
                 </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <button type="button" class="btn btn-primary" id="btn_buscar_op" onclick="MostrarModal();">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </div>
-                </div>
-                <br />
-                @Html.Action("GridViewPartial_DebitoBanco_op")
-            </div>
 
-            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_diario">
-                @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
-            </div>
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_flujo">
-                <div class="row">
-                    <div class="col-md-12">
-                        <button type="button" class="btn btn-primary" id="btn_buscar_plantilla" onclick="MostrarModalPlantilla();">
-                            <i class="fa fa-search" title="Plantilla Tipo de Flujo"></i>
-                        </button>
-                    </div>
-                </div>
-                <br />
-                @Html.Action("GridViewPartial_flujo_det", new { Area = "Banco", Controller = "TipoFlujoBanco" })
-            </div>
-
-          </div>
+             </div>
+        </div>
     </div>
 
     <div class="box-footer">
-        @if (ViewBag.MostrarBoton ?? false)
-        {
-            <button type="submit" class="btn btn-danger">Anular</button>
-        }        
-        <a class="btn btn-default" href="@Url.Action("Index", "NotaDeDebitoBanco", new { Area = "Banco" }, null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index", "DepositoBanco", new { Area = "Banco" }, null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
