--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Index.cshtml
@@ -10,7 +10,8 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Index", "ComprobanteContable", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
-    @Html.HiddenFor(q=>q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -100,7 +101,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_comprobante_contable", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_comprobante_contable", new { Nuevo = ViewBag.Nuevo })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
