--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/RevisionContable/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/RevisionContable/Index.cshtml
@@ -105,7 +105,7 @@
                         <br />
                         <div class="row">
                             <div class="col-md-12">
-                                @Html.Action("GridViewPartial_Facturacion", new { IdTransaccionSession = Model.IdTransaccionSession })
+                                @Html.Action("GridViewPartial_Facturacion", new { Nuevo = ViewBag.Nuevo })
                             </div>
                         </div>
                         
