--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Index.cshtml
@@ -11,6 +11,8 @@
 
 @using (Html.BeginForm("Index", "CambioProducto", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 <div class="box ">
     <div class="box-header with-border">
         <div class="row">
@@ -100,7 +102,7 @@
         </div>
     </div>
     <div class="box-body">
-        @Html.Action("GridViewPartial_CambioProducto", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal, Nuevo=ViewBag.Nuevo })
+        @Html.Action("GridViewPartial_CambioProducto", new { Nuevo=ViewBag.Nuevo })
     </div>
     <!-- /.box-body -->
     <div class="box-footer">
