--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaSinPrecios/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaSinPrecios/Index.cshtml
@@ -10,6 +10,8 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Index", "GuiaRemision", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -90,7 +92,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_guias_remision", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, Nuevo = ViewBag.Nuevo })
+            @Html.Action("GridViewPartial_guias_remision", new { Nuevo = ViewBag.Nuevo })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
