--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaSinPrecios/_GridViewPartial_guias_remision.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaSinPrecios/_GridViewPartial_guias_remision.cshtml
@@ -4,7 +4,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridViewPartial_guias_remision";
-        settings.CallbackRouteValues = new { Controller = "GuiaSinPrecios", Action = "GridViewPartial_guias_remision", Fecha_ini = ViewBag.Fecha_ini, Fecha_fin = ViewBag.Fecha_fin, Nuevo = ViewBag.Nuevo };
+        settings.CallbackRouteValues = new { Controller = "GuiaSinPrecios", Action = "GridViewPartial_guias_remision", Nuevo = ViewBag.Nuevo };
         settings.KeyFieldName = "IdGuiaRemision";
         settings.Width = Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
@@ -131,6 +131,7 @@
             });
             column.Width = Unit.Percentage(5);
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
