--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ProbabilidadCobro/_GridViewPartial_ProbabilidadCobro.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ProbabilidadCobro/_GridViewPartial_ProbabilidadCobro.cshtml
@@ -107,7 +107,7 @@
 
             });
         });
-
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
