--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma.cshtml
@@ -4,7 +4,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_proforma";
-        settings.CallbackRouteValues = new { Controller = "Proforma", Action = "GridViewPartial_proforma",  fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal, Nuevo = ViewBag.Nuevo };
+        settings.CallbackRouteValues = new { Controller = "Proforma", Action = "GridViewPartial_proforma", Nuevo = ViewBag.Nuevo };
         settings.KeyFieldName = "IdProforma";
         settings.Width = Unit.Percentage(100);
 
@@ -155,6 +155,7 @@
             });
             column.Width = Unit.Percentage(5);
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
